# splitforge-local

./: .eslintrc.js  .gitignore  LICENSE  README.md  jest.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.test.json
__tests__/: fileNaming.test.ts  splitter.test.ts  textCounter.test.ts
apps/desktop/: next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/app/: globals.css  layout.tsx  page.tsx
apps/desktop/src/components/: ExportSummary.tsx  Header.tsx  OutputFolderPicker.tsx  PreviewPanel.tsx  ProgressModal.tsx  SplitSettings.tsx  TextInputPanel.tsx  Toast.tsx
apps/desktop/src/lib/: exporter.ts  storage.ts  tauri-bridge.ts
apps/web/: .eslintrc.js  next.config.js  package.json  tailwind.config.js  vercel.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: ExportPanel.tsx  Header.tsx  PreviewPanel.tsx  ProgressModal.tsx  SplitSettings.tsx  TextInputPanel.tsx  Toast.tsx
apps/web/src/lib/: capabilities.ts  exporter.ts  fileNaming.ts  splitter.ts  storage.ts  textCounter.ts  (+1 more)
src/app/: globals.css  layout.tsx  page.tsx
src/components/: ExportPanel.tsx  Header.tsx  PreviewPanel.tsx  ProgressModal.tsx  Settings.tsx  TextInput.tsx  Toast.tsx
src/lib/: capabilities.ts  exporter.ts  fileNaming.ts  splitter.ts  storage.ts  workerClient.ts
src/workers/: splitter.worker.ts
(+1 files in other folders)
