[package]
name = "splitforge-local"
version = "1.0.0"
description = "SplitForge Local — local-first text splitter"
authors = ["SplitForge Contributors"]
license = "MIT"
repository = "https://github.com/VijaysinghPuwar/splitforge-local"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
panic       = "abort"
strip       = true
